Fixed a few theme glitches... everything should left-align now.

--- a/themes/lite/style.css
+++ b/themes/lite/style.css
@@ -276,7 +276,6 @@ UL {
 }
 #body TABLE {
 	width: 90%;
-	margin: auto;
 }
 
 
